--- a/api/package.json
+++ b/api/package.json
@@ -5,11 +5,13 @@
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api.js"
+    "start": "nodemon -r dotenv/config api.js"
   },
   "author": "Tan Khai Huynh",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0"
   },
